# FBI-IDS-1

./: .gitignore  CMakeLists.txt
blockchain/: .gitignore
blockchain/Implementation/: Block_Chain codebase.ipynb  PBFT_Consensus.py
blockchain/Testing/: run_node.py
include/: FeaturesDictBuilder.hpp  Flow.hpp  FlowTable.hpp  Packet_Parser.hpp
new-updated/: README.md  blockchain-dockerfile.txt  blockchain-requirements.txt  docker-compose.yml  ml-requirements.txt  ml-server-dockerfile.txt  module-3-config.py  traffic-capturer-dockerfile.txt
signature_model/: .gitignore
signature_model/analysis/: top_mutual_info.csv  top_rf_importances.csv
signature_model/config/: features.json  features_v1.json  features_v2.json  features_v3.json  labels.json  labels_v1.json
signature_model/inference/: anomaly_detector.py  anomaly_predictor.py  fusion_engine.py  fusion_ids.py  predictor.py  signature_predictor.py  test_anamoly.py  test_fusion_ids.py  test_predictor.py
signature_model/preprocessing/: anomaly_splits.py  fusion_split.py  preprocessing.py  step1_merge.py  step2_clean.py  step3_sample.py  step4_feature_and_split.py
signature_model/training/: alert_analysis.py  feature_correlation.py  feature_importance.py  tain_if2.py  train_anomaly_model.py  train_anomaly_model_v2_tuned.py  train_if.py  train_model.py  train_rf.py  train_xgb.py  (+2 more)
src/: feature_extractor.cpp  flow_table.cpp  packet_parser.cpp  worker.cpp
traffic_capturer/: CMakeLists.txt
traffic_capturer/include/: ActivityStats.hpp  Capture.hpp  Feature_Extractor.hpp  FeaturesDictBuilder.hpp  Flow.hpp  FlowTable.hpp  HeaderStats.hpp  Headers.hpp  IATStats.hpp  LengthStats.hpp  Packet.hpp  PacketMeta.hpp  Packet_Parser.hpp  Queue.hpp  RunningStats.hpp  TCPStats.hpp  Utils.hpp  VolumeStats.hpp  Worker.hpp
traffic_capturer/src/: capture.cpp  featuresdictbuilder.cpp  flow_table.cpp  main.cpp  main2.cpp  packet.cpp  packet_parser.cpp  queue.cpp  test.cpp  utils.cpp  worker.cpp
(+11 files in other folders)
